--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
@@ -17,6 +17,7 @@
     <link rel="shortcut icon" href="http://www.mysite.com/favicon.ico" />
     <!-- css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" />
     <link rel="stylesheet" href="../resources/css/styles.css" />
     <!-- js -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -36,7 +37,19 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <a href="#">
-                <img src="https://www.meconomynews.com/news/photo/202404/91635_111306_3112.jpg" alt="hera" />
+                <picture>
+                  <source srcset="https://images.unsplash.com/photo-1515002246390-7bf7e8f87b54?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" media="(min-width: 1024px)" />
+                  <source srcset="https://images.unsplash.com/photo-1511275539165-cc46b1ee89bf?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" media="(min-width: 600px)" />
+                  <source srcset="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                  <img src="https://images.unsplash.com/photo-1516139008210-96e45dccd83b?q=80&w=2080&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="Flowers" />
+                </picture>
+                <div class="text-area">
+                  <div class="inner">
+                    <strong class="text-area__tit">슬라이드 제목</strong>
+                    <p class="text-area__cont">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <span class="text-area__goto text-area__goto--hidden">바로가기</span>
+                  </div>
+                </div>
               </a>
             </div>
             <div class="swiper-slide">
@@ -56,12 +69,99 @@
           <!-- If we need navigation buttons -->
           <div class="swiper-button-prev"></div>
           <div class="swiper-button-next"></div>
-
-          <!-- If we need scrollbar -->
-          <div class="swiper-scrollbar"></div>
         </div>
       </div>
-      <main id="container">content</main>
+      <main id="container">
+        <!-- 스튜디오 섹션 -->
+        <section class="sec-g sec-studio">
+          <div class="inner">
+            <h2 class="sec-g__tit">섹션 타이틀</h2>
+            <div class="sec-g__cont">
+              <div class="swiper slide-studio">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                  <div class="swiper-slide">
+                    <a href="#">
+                      <img src="https://www.wooriam.kr/upload/public/board/LnMCTNmG6JaCGQHJ/tb5eAihFnIe9tAmJ.jpg" alt="" />
+                      <strong>미국 공모주 정말 쉽게 받는 방법</strong>
+                      <em>2024.10.16</em>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <a href="#" class="sec-g__more">더보기</a>
+          </div>
+        </section>
+
+        <!-- ㄴㅠㅅㅡㅅㅔㄱㅅㅕㄴ -->
+        <section class="sec-g sec-news bg-gray">
+          <div class="inner">
+            <h2 class="sec-g__tit">섹션 타이틀</h2>
+            <div class="sec-g__cont">컨텐츠</div>
+            <a href="#" class="sec-g__more">더보기</a>
+          </div>
+        </section>
+
+        <!-- ㄴㅠㅅㅡㅅㅔㄱㅅㅕㄴ -->
+        <section class="sec-g sec-news">
+          <div class="inner">
+            <h2 class="sec-g__tit">섹션 타이틀</h2>
+            <div class="sec-g__cont">컨텐츠</div>
+            <a href="#" class="sec-g__more">더보기</a>
+          </div>
+        </section>
+
+        <!-- ㄴㅠㅅㅡㅅㅔㄱㅅㅕㄴ -->
+        <section class="sec-g sec-news bg-gray">
+          <div class="inner">
+            <h2 class="sec-g__tit">섹션 타이틀</h2>
+            <div class="sec-g__cont">컨텐츠</div>
+            <a href="#" class="sec-g__more">더보기</a>
+          </div>
+        </section>
+      </main>
       <footer id="footer">footer</footer>
     </div>
 
@@ -89,6 +189,15 @@
         //     spaceBetween: 50,
         //   },
         // },
+      });
+
+      var swiper = new Swiper(".slide-studio", {
+        slidesPerView: 3,
+        spaceBetween: 30,
+        pagination: {
+          el: ".swiper-pagination",
+          clickable: true,
+        },
       });
     </script>
   </body>
